# transaction-ledger

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: lib.rs  main.rs  state.rs
src/api/: dto.rs  handlers.rs  mod.rs  routes.rs
src/config/: openapi.yaml
src/domain/: account.rs  currency.rs  ledger.rs  mod.rs  transaction.rs
src/infrastructure/: kafka.rs
tests/: common.rs  ledger_tests.rs
