[package]
name = "transaction-ledger"
version = "0.1.0"
edition = "2024"
authors = ["Ismail Ibrahim <ismailsofteng95@gmail.com>"]
description = "A transaction ledger service with account management, transactions, and reporting built using Axum."
repository = "https://github.com/solomonster/transaction-ledger"
keywords = ["ledger", "banking", "axum", "transactions"]
categories = ["web-programming", "finance"]

[dependencies]
http = "0.2.12"
# Web framework & HTTP middleware (CORS, etc.) 
axum = "0.7"
axum-macros = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Tokio async runtime
tokio = { version = "1.41", features = ["full"] }

# Serialization / deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date & time
chrono = { version = "0.4", features = ["serde"] }

# UUIDs for IDs
uuid = { version = "1.10", features = ["v4", "serde"] }

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Kafka client (async + tokio compatible)
rdkafka = { version = "0.38.0", features = ["tokio", "cmake-build"] }
rand = "0.9.2"

hyper = "0.14"
tower = { version = "0.4", features = ["util"] }

[dev-dependencies]


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
debug = 0
incremental = false
panic = "abort"
